--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,15 +43,15 @@
             <div class="clearfix"></div>
 
             <!-- menu profile quick info -->
-{#            <div class="profile clearfix">#}
-{#              <div class="profile_pic">#}
-{#                <img src="images/img.jpg" alt="..." class="img-circle profile_img">#}
-{#              </div>#}
-{#              <div class="profile_info">#}
-{#                <span>Welcome,</span>#}
-{#                <h2>John Doe</h2>#}
-{#              </div>#}
-{#            </div>#}
+            <div class="profile clearfix">
+              <div class="profile_pic">
+                <img src="{% static "images/user.png" %}" alt="..." class="img-circle profile_img">
+              </div>
+              <div class="profile_info">
+                <span>Welcome,</span>
+                <h2>{{user.useremployee}}</h2>
+              </div>
+            </div>
             <!-- /menu profile quick info -->
 
             <br />
@@ -74,25 +74,23 @@
 
             </div>
               {% endif %}
+ {% if user.useremployee.karyawan.depo.id == 3 %}
+  <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
+              <div class="menu_section">
+                <h3>Menu </h3>
+                <ul class="nav side-menu">
+                  <li><a><i class="fa fa-clone"></i>Data <span class="fa fa-chevron-down"></span></a>
+                    <ul class="nav child_menu active">
+                      <li><a href="{% url 'home' %}">Cek Stok</a></li>
+                      <li><a href="{% url 'cekstok' %}">Data Stok</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
 
-            <!-- /sidebar menu -->
+            </div>
 
-            <!-- /menu footer buttons -->
-{#            <div class="sidebar-footer hidden-small">#}
-{#              <a data-toggle="tooltip" data-placement="top" title="Settings">#}
-{#                <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>#}
-{#              </a>#}
-{#              <a data-toggle="tooltip" data-placement="top" title="FullScreen">#}
-{#                <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>#}
-{#              </a>#}
-{#              <a data-toggle="tooltip" data-placement="top" title="Lock">#}
-{#                <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>#}
-{#              </a>#}
-{#              <a data-toggle="tooltip" data-placement="top" title="Logout" href="login.html">#}
-{#                <span class="glyphicon glyphicon-off" aria-hidden="true"></span>#}
-{#              </a>#}
-{#            </div>#}
-            <!-- /menu footer buttons -->
+ {% endif %}
           </div>
         </div>
 
