--- a/templates/stok/data.html
+++ b/templates/stok/data.html
@@ -26,13 +26,13 @@
                 <div class="x_panel">
                   <div class="x_title">
                     <h2>Data Stok  <small>Depo</small></h2>
-                    <ul class="nav navbar-right panel_toolbox">
-                      <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                      </li>
-
-                      <li><a class="close-link"><i class="fa fa-close"></i></a>
-                      </li>
-                    </ul>
+{#                    <ul class="nav navbar-right panel_toolbox">#}
+{#                      <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>#}
+{#                      </li>#}
+{##}
+{#                      <li><a class="close-link"><i class="fa fa-close"></i></a>#}
+{#                      </li>#}
+{#                    </ul>#}
                     <div class="clearfix"></div>
                   </div>
                   <div class="x_content">
@@ -63,7 +63,7 @@
         {% endfor %}
     </tbody>
     </table>
-                    </table>
+
                   </div>
                 </div>
               </div>
