--- a/templates/stok/print.html
+++ b/templates/stok/print.html
@@ -28,13 +28,15 @@
                    </div>
 
                 <div class="col-md-3 col-sm-4 col-xs-4">
-                            <select class="form-control" name="periode">
+                            <select class="form-control" name="periode" REQUIRED>
+                                <option value="">.:Pilih Periode:.</option>
                                 <option value="1">Periode 1</option>
                                 <option value="2">Periode 2</option>
                             </select>
                         </div>
                          <div class="col-md-3 col-sm-4 col-xs-4">
-                           <select class="form-control" name="month">
+                           <select class="form-control" name="month" required >
+                                <option  value="" >.:Pilih Bulan:.</option>
                                 <option value="1">JANUARY</option>
                                 <option value="2">FEBRUARY</option>
                                 <option value="3">MARCH</option>
@@ -56,6 +58,14 @@
               </div>
             </div>
                 </form>
+                <h4>TOTAL KESELURUHAN STOCK PER MERK PER UKURAN</h4>
+                <H5>CUT OFF
+                    {% if tanggal == '2001-01-01'  %}
+                        -
+                        {% else %}
+                        {{ tanggal }}
+                    {% endif %}
+                    </H5>
 <div class="x_content " id="mydiv">
                    <br>
                     <table  class="table table-striped table-bordered">
